--- a/package.json
+++ b/package.json
@@ -15,11 +15,18 @@
     "config": "^3.3.3",
     "dayjs": "^1.10.4",
     "express": "^4.17.1",
+    "got": "^11.8.2",
     "winston": "^3.3.3"
   },
+  "optionalDependencies": {
+    "ejs": "^3.1.6"
+  },
   "devDependencies": {
+    "@types/config": "^0.0.38",
+    "@types/ejs": "3.0.6",
+    "@types/express": "4.17.1",
     "@types/node": "^14.14.30",
-    "typescript": "^4.1.5",
-    "ts-node": "^9.1.1"
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.5"
   }
 }
